Make static and media paths and urls configurable.

--- a/defaults.ini
+++ b/defaults.ini
@@ -14,3 +14,11 @@ enabled=false
 enabled=false
 timeout=300
 cachesite=false
+
+[path]
+media=media
+static=public/static
+
+[url]
+media=
+static=/static/
